...
    onPress,
}: NutritionistAgendaCardProps) {
    return (
        <Animated.View style={{ opacity: fadeAnim }}>
            {hasAppointmentsToday ? (
                <HomeCard
                    testID="agenda-card-btn"
                    backgroundColor={colors.white}
                    onPress={onPress}
                >
                    <View style={styles.cardTopRow}>
                        <View style={styles.iconCircle}>
                            <Feather name="calendar" size={22} color={colors.primary} />
...
